--- a/RemoteAdvisor/Views/Home/Index.cshtml
+++ b/RemoteAdvisor/Views/Home/Index.cshtml
@@ -214,7 +214,7 @@
 
         function AddClientToSession() {
             var contact = new Object();
-            contact.ToClient = $("#client-name").val();
+            contact.ToName = $("#client-name").val();
             contact.ToCellNumber = $("#client-cell").val();
             contact.MeetingId = $("#meetingId").val();
            
