--- a/RemoteAdvisor/Views/Home/Index.cshtml
+++ b/RemoteAdvisor/Views/Home/Index.cshtml
@@ -79,7 +79,7 @@
         <div id="media-selectors">
             <div class="formal-section">
                 <h5>Call Devices</h5>
-                <div id="device-list" class="hidden1">
+                <div id="device-list" class="hidden">
                     <div id="cameras" class="dropdown-area">
                         <label labelfor="camera-list">
                             Cameras
