--- a/RemoteAdvisor/Views/Home/Index.cshtml
+++ b/RemoteAdvisor/Views/Home/Index.cshtml
@@ -49,7 +49,7 @@
     <div class="main-page d-flex flex-wrap">
         <div id="call-panel" class="hidden1">
             <!-- panels for video display -->
-            <div class="d-flex flex-row" id="remote-displays">
+            <div class="d-flex flex-wrap" >
                 <!-- Local Video Preview-->
                 <div class="formal-section">
                     <h5>Participants</h5>
@@ -70,6 +70,10 @@
                             </div>
                         </div>
                     </div>
+                </div>
+                
+                <div class="formal-section">
+                    <div id="remote-displays"></div>
                 </div>
             </div>
         </div>
